--- a/src/input.css
+++ b/src/input.css
@@ -6,11 +6,19 @@
 *::after {
 	box-sizing: border-box;
 }
-/* * {
+* {
 	margin: 0;
 	padding: 0;
 	font: inherit;
-} */
+	font-size: inherit;
+	font-family: inherit;
+}
+body{
+	font-family: 'Quattrocento', serif;
+	font-weight: 400;
+	background-color: #F5EFE6;
+	color: black;
+}
 html{
 	scroll-behavior: smooth;
 }
